<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (c) 2025 Mohammed Mahmoud
  ~  *
  ~  * This file is part of FocusOn project.
  ~  *
  ~  * GitHub: https://github.com/MMK231
  ~  *
  ~  * All rights reserved. Unauthorized copying of this file,
  ~  * via any medium is strictly prohibited.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />
    <item
        android:id="@+id/calender"
        android:icon="@drawable/calender_icon"
        android:title="@string/calender" />
    <item
        android:id="@+id/pomodoro"
        android:icon="@drawable/pomodoro_icon"
        android:title="@string/pomodoro" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/settings" />
</menu>