<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright (c) 2025 Mohammed Mahmoud
  ~  *
  ~  * This file is part of FocusOn project.
  ~  *
  ~  * GitHub: https://github.com/MMK231
  ~  *
  ~  * All rights reserved. Unauthorized copying of this file,
  ~  * via any medium is strictly prohibited.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#979797"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:minLines="6" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/show_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="16 / 9 / 2025" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/add"
        android:textColor="@color/white" />
</LinearLayout>